# fanpico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_httpd_fs.sh  command.c  commands.md  compile.sh  config.c  credits.txt  debug.sh  default_config.json  default_config.s  fanpico.c  fanpico.h  flash.sh  index.md  pwm.c  sensors.c  square_wave_gen.c  square_wave_gen.pio  tacho.c  util.c
.github/: FUNDING.yml
.github/workflows/: cmake.yml  codeql.yml
boards/fanpico-0200/: README.md  bom.csv
boards/fanpico-0200/kicad/: extra_fan_channel.kicad_sch  fan_channels.kicad_sch  fanpico.kicad_pcb  fanpico.kicad_pro  fanpico.kicad_sch  power.kicad_sch  sensors.kicad_sch
boards/fanpico-0401D/: README.md  bom.csv
boards/fanpico-0401D/kicad/: extra_fan_channel.kicad_sch  fan_channel.kicad_sch  fan_channels.kicad_sch  fanpico.kicad_pcb  fanpico.kicad_pro  fanpico.kicad_sch  power.kicad_sch  sensors.kicad_sch
boards/fanpico-0804/: README.md  bom.csv
boards/fanpico-0804/kicad/: extra_fan_channel.kicad_sch  fan_channel.kicad_sch  fan_channels.kicad_sch  fanpico.kicad_pcb  fanpico.kicad_pro  fanpico.kicad_sch  power.kicad_sch  sensors.kicad_sch
boards/fanpico-0804D/: README.md  bom.csv
boards/fanpico-0804D/kicad/: extra_fan_channel.kicad_sch  fan_channel.kicad_sch  fan_channels.kicad_sch  fanpico.kicad_pcb  fanpico.kicad_pro  fanpico.kicad_sch  power.kicad_sch  sensors.kicad_sch
boards/oled-adapter/: README.md
boards/oled-adapter/kicad/: fanpico-oled-adapter.kicad_pcb  fanpico-oled-adapter.kicad_prl  fanpico-oled-adapter.kicad_pro  fanpico-oled-adapter.kicad_sch
boards/power-board/: README.md  bom.csv
boards/power-board/kicad/: fanpico_powerboard.kicad_pcb  fanpico_powerboard.kicad_prl  fanpico_powerboard.kicad_pro  fanpico_powerboard.kicad_sch
cmake/: wolfssh_pico.cmake  wolfssl_pico.cmake
contrib/: build_makefsdata.sh  kicad_extract_netclasses.py  makefsdata.patch
kicad/: README.md  fanpico.kicad_sym
kicad/FanPico.pretty/: D_SOT-23_ANK.kicad_mod  Fuseholder_Clip-5x20mm_Littelfuse_445-030_Inline_P20.50x5.20mm_D1.30mm_Horizontal.kicad_mod  IND-SMD_L7.2-W6.6_GPSR07X0.kicad_mod  L_7.3x7.3_H3.5_HandSolder.kicad_mod  OLED_module.kicad_mod  P2PAK.kicad_mod  RPi_Pico_PicoW_SMD_TH.kicad_mod  SW-SMD_L3.9-W3.0-P4.45.kicad_mod  SW_PUSH_6mm_SMD_2.kicad_mod  TE 171826-4 Floppy 4-pin Combo.kicad_mod  TE 171826-4 Floppy 4-pin.kicad_mod  TE_MATE-N-LOK_350211-1_1x04_P5.08mm_Vertical.kicad_mod  TE_MATE-N-LOK_350211-1_1x04_P5.08mm_Vertical_and_RightAngle.kicad_mod  TSOT-26.kicad_mod  ToolingHole_1.152mm.kicad_mod
mibs/: FanPico-MIB  TJKO-FanPico-MIB  TJKO-ROOT-MIB
src/: CMakeLists.txt  bi_decl.c  command.c  command_util.c  command_util.h  config.c  config.h.in  crc32.c  credits.s  default_config.S  default_config.json  dhcp.c  display.c  display_lcd.c  display_oled.c  fanpico-compile.h.in  fanpico.c  fanpico.h  fanpico_fsdata.c  filter_lossypeak.c  filter_sma.c  filters.c  filters.h  flash.c  httpd-fs_ssi.list  httpd.c  i2c.c  i2c.h  i2c_adt7410.c  i2c_aht.c  i2c_as621x.c  i2c_bmp180.c  i2c_bmp280.c  i2c_dps310.c  i2c_lps22.c  i2c_lps25.c  i2c_mcp9808.c  i2c_ms8607.c  i2c_pct2075.c  i2c_sht3x.c  (+43 more)
src/boards/: 0200.h  0200.json  0401D.h  0401D.json  0803D.h  0804.h  0804.json  0804D.h  0804D.json
src/httpd-fs/: 404.html  fanpico.css  index.shtml  status.csv  status.json
src/logos/: custom.h  custom.s  default.h  default.s
src/ssh/: ringbuffer.c  ringbuffer.h  sha512crypt.c  ssh_server.c  ssh_server.h
src/themes/: custom.s  default-320x240.h  default-480x320.h  lcd-background.s
src/wolfssl/: user_settings.h
